feat: Enhanced deepCopyContainers with Queue/Deque preservation and optimizations
Major improvements to deepCopyContainers():

Type Preservation Enhancements:
- Deque → LinkedList (preserves deque operations, supports nulls)
- PriorityQueue → PriorityQueue (preserves comparator and heap semantics)
- Other Queue types → LinkedList (preserves queue operations)
- EnumSet uses efficient clone().clear() for empty sets

Performance Optimizations:
- Direct array access for object arrays instead of reflection in tight loops
- Pre-sized IdentityHashMap (64) to avoid rehash thrashing
- Primitive arrays at root level not queued (already fully copied)
- Eliminated redundant null checks inside isContainer blocks

Documentation Improvements:
- Significantly reduced warning text since Queue/Deque semantics are preserved
- Added thread safety warning for concurrent source mutation
- Fixed Javadoc to say "iteratively" instead of "recursively"
- Updated examples to use Arrays.asList() for Java 8 compatibility
- Fixed getEmptyCollection Javadoc to match implementation (returns emptySet)

Tests:
- Added comprehensive tests for Deque preservation with LinkedList
- Added PriorityQueue tests with natural and custom comparators
- Added tests for generic Queue types
- Added primitive array root-level copy tests

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>